# CrabVoice

./: .gitignore  CONTRIBUTING.md  README.md  README_RU.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: i18n.ts  icons.ts  injector.ts  injectorPanel.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  injector.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto/: yandex.proto
src-tauri/src/: domain.rs  error.rs  lib.rs  logger.rs  main.rs  premium.rs  settings.rs  worker_api.rs  yandex_api.rs
src/locales/: en.json  ru.json
