[package]
name = "CrabVoice"
version = "0.7.0"
description = "Cross-platform real-time voice-over translation app for video platforms. Features native audio sync, vot.js integration, and mobile support"
authors = ["Zenonel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crabvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = ["macos-proxy"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
tokio = { version = "1", features = ["full"] }
prost = "0.13"
bytes = "1"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
log = "0.4.29"

[features]
default = []
# pnpm tauri build -- --features subscribers
# pnpm tauri build -- --features premium
# pnpm tauri build -- --features subscribers,premium
subscribers = []
premium = ["subscribers"]
